// Vitest Snapshot v1

exports[`<AuthApiExampleTemplate /> > should render a failure message if unauthenticated 1`] = `
<DocumentFragment>
  <div
    class="undefined flex flex-col mx-auto min-h-screen"
  >
    <nav>
      <ul
        class="undefined flex flex-row flex-wrap justify-between list-none mx-auto max-w-screen-sm"
      >
        <li>
          <a
            class="undefined text-black no-underline"
            href="/"
          >
            🏠 Home
          </a>
        </li>
        <li>
          <a
            class="undefined text-black no-underline"
            href="/posts"
          >
            📰 Posts
          </a>
        </li>
        <li>
          <a
            class="undefined text-black no-underline"
            href="/pages"
          >
            📑 Pages
          </a>
        </li>
        <li>
          <a
            class="undefined text-black no-underline"
            href="/examples"
          >
            ⚛️ Examples
          </a>
        </li>
      </ul>
    </nav>
    <main>
      <div>
        <h1>
          API Authorization Example
        </h1>
        <a
          href="/"
        >
          <span>
            Home →
          </span>
        </a>
        <div
          class="undefined mx-auto"
        >
          <p>
            Gatsby was unable to make an authorized request to the WordPress API. Please check your .env.development.local file to ensure that your 
            <code>
              WP_APPLICATION_USERNAME
            </code>
             and 
            <code>
              WP_APPLICATION_PASSWORD
            </code>
             are set correctly.
          </p>
          <p>
            For more information on how to set these values, please see 
            <a
              href="https://decoupledkit.pantheon.io/docs/frontend-starters/gatsby/gatsby-wordpress/setting-environment-variables"
            >
              Setting Environment Variables
            </a>
          </p>
        </div>
      </div>
    </main>
    <footer
      class="undefined bg-black flex flex-col justify-self-end mt-12"
    >
      <nav
        class="undefined flex flex-col mx-auto"
      >
        <ul
          class="undefined mt-4"
        />
      </nav>
      <div
        class="undefined text-white my-4 mx-auto p-2"
      >
        <span>
          © 2023 Built with 
          <a
            class="undefined underline"
            href="https://www.gatsbyjs.com"
          >
            Gatsby
          </a>
           and 
          <a
            class="undefined underline"
            href="https://wordpress.org/"
          >
            WordPress
          </a>
        </span>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`<AuthApiExampleTemplate /> > should render a success message if authenticated 1`] = `
<DocumentFragment>
  <div
    class="undefined flex flex-col mx-auto min-h-screen"
  >
    <nav>
      <ul
        class="undefined flex flex-row flex-wrap justify-between list-none mx-auto max-w-screen-sm"
      >
        <li>
          <a
            class="undefined text-black no-underline"
            href="/"
          >
            🏠 Home
          </a>
        </li>
        <li>
          <a
            class="undefined text-black no-underline"
            href="/posts"
          >
            📰 Posts
          </a>
        </li>
        <li>
          <a
            class="undefined text-black no-underline"
            href="/pages"
          >
            📑 Pages
          </a>
        </li>
        <li>
          <a
            class="undefined text-black no-underline"
            href="/examples"
          >
            ⚛️ Examples
          </a>
        </li>
      </ul>
    </nav>
    <main>
      <div>
        <h1>
          API Authorization Example
        </h1>
        <a
          href="/"
        >
          <span>
            Home →
          </span>
        </a>
        <div
          class="undefined mx-auto"
        >
          <p>
            🎉 Gatsby was able to successfully make an authenticated request to WordPress! 🎉
          </p>
        </div>
      </div>
    </main>
    <footer
      class="undefined bg-black flex flex-col justify-self-end mt-12"
    >
      <nav
        class="undefined flex flex-col mx-auto"
      >
        <ul
          class="undefined mt-4"
        />
      </nav>
      <div
        class="undefined text-white my-4 mx-auto p-2"
      >
        <span>
          © 2023 Built with 
          <a
            class="undefined underline"
            href="https://www.gatsbyjs.com"
          >
            Gatsby
          </a>
           and 
          <a
            class="undefined underline"
            href="https://wordpress.org/"
          >
            WordPress
          </a>
        </span>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;
